# zitch

./: .env.example  .gitignore  APPLY_TO_REPO.md  README.md  ZITCH_APK_SECURITY_AUDIT.md  ZITCH_AUDIT_REPORT.md  ZITCH_TECHNOLOGIES_PRIVACY_POLICY_v2.1.docx  ZITCH_TECHNOLOGIES_PRIVACY_POLICY_v2.docx  ZITCH_TECHNOLOGIES_Terms_of_Use_v2.1.docx  ZITCH_TECHNOLOGIES_Terms_of_Use_v2.docx  _layout (1).tsx  app.json  codemagic.yaml  eas.json  home.tsx  linkbank.tsx  metro.config.js  mono.tsx  package-lock.json  package.json  render.yaml  tailwind.config.js  wallet (2).tsx
.devcontainer/: devcontainer.json  setup.sh
app/: _layout.tsx  iconmenucode.txt  index.tsx
backend/: .env.example  .gitignore  BUILD.md  build.sh  e2e_smoke.py  manage.py  render.yaml  requirements.txt
compliance/: README.md  ZITCH_ACCESS_MANAGEMENT_AND_MFA_POLICY_v1.0.docx  ZITCH_AML_ABC_QUESTIONNAIRE_RESPONSE_v1.0.docx  ZITCH_AML_CFT_CPF_POLICY_v1.0.docx  ZITCH_ANTI_BRIBERY_CORRUPTION_POLICY_v1.0.docx  ZITCH_ATTESTATION_NO_SECURITY_BREACH_12_MONTHS_v1.0.docx  ZITCH_ATTESTATION_THIRD_PARTY_VENDORS_v1.0.docx  ZITCH_BUSINESS_CONTINUITY_PLAN_v1.0.docx  ZITCH_CODE_OF_CONDUCT_AML_ATTESTATION_v1.0.docx  ZITCH_CUSTOMER_SERVICE_AND_COMPLAINT_POLICY_v1.0.docx  ZITCH_DATA_PROTECTION_POLICY_v1.0.docx  ZITCH_KYC_CDD_OPERATING_PROCEDURE_v1.0.docx  ZITCH_MLRO_APPOINTMENT_LETTER_v1.0.docx  ZITCH_RISK_ASSESSMENT_AND_INCIDENT_RESPONSE_PLAN_v1.0.docx
components/: AuthGuard.tsx  Collapsible.tsx  ComingSoonView.tsx
constants/: images.js
mcp-server/: .env.example  .gitignore  README.md  pyproject.toml  server.py
(+325 files in other folders)
